--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,38 +1,38 @@
-
-<LinearLayout
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:padding="20sp">
+    android:orientation="vertical"
+    android:elevation="8dp"
+    tools:context=".MainFragment">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Gyro Mini-Golf"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:textColor="#000"
-            android:layout_marginBottom="10sp"
-            />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New Game"
-            android:id="@+id/new_button"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="continue"
-            android:id="@+id/continue_button"/>
+            android:id="@+id/new_button"
+            android:layout_margin="4dp"
+            android:padding="10dp"
+            android:layout_gravity="center"
+            android:text="@string/new_text"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="About"
-            android:id="@+id/about_button"/>
+            android:id="@+id/continue_button"
+            android:layout_gravity="center"
+            android:layout_margin="4dp"
+            android:padding="10dp"
+            android:text="@string/continue_text"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/about_button"
+            android:layout_gravity="center"
+            android:layout_margin="4dp"
+            android:padding="10dp"
+            android:text="@string/about_text"/>
 
 </LinearLayout>
