added some gyro code to the game activity for testing

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,12 @@
     android:elevation="8dp"
     tools:context=".MainFragment">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gyro Golf Maze"
+            android:textColor="#000"/>
+
 
         <Button
             android:layout_width="match_parent"
