--- a/app/src/main/res/drawable/ball.xml
+++ b/app/src/main/res/drawable/ball.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:drawable="@drawable/one"
+        android:maxLevel="0" />
 
 </selector>
