--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -14,6 +14,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:layout_height="100sp"
+                android:layout_width="100sp"
+                android:background="#BCCC"
+                android:id="@+id/level_timer"/>
 
 
         </GridLayout>
