View created to make maze fit in only part of the screen

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -10,15 +10,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/_0"
-            android:textSize="148sp"
+            android:textSize="20sp"
             android:id="@+id/tv_count"
-            android:textColor="#AAAA"
+            android:textColor="#875600"
             />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/maze_view"
+            />
+
 
 
 
