--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:text="@string/_0"
             android:textSize="40sp"
-            android:id="@+id/tv_count"
+            android:id="@+id/timer_count"
             android:textColor="#875600"
             android:layout_weight="1"
             />
