--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
 
     <fragment
         android:name="edu.stlawu.final_project.MainFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/fragment_main"
         android:layout_gravity="center"
         tools:layout="@layout/fragment_main"/>
