--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,15 +7,57 @@
     android:elevation="8dp"
     tools:context=".MainFragment">
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:id="@+id/login"
-        android:layout_margin="4dp"
-        android:padding="10dp"
-        android:layout_gravity="right"
-        android:layout_weight="1"
-        android:text="@string/login_text"/>
+        android:orientation="vertical"
+        android:padding="10sp"
+        android:layout_gravity="center">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5sp"
+            android:inputType="textEmailAddress"
+            android:hint="email"
+            android:id="@+id/signInEmail"
+            />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5sp"
+            android:inputType="textPassword"
+            android:hint="password"
+            android:id="@+id/signInPass"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
+            android:text="Login"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:id="@+id/LoginButton"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dont Have an Account? Sign Up"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:id="@+id/signUpText"
+            />
+    </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -69,4 +111,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
