--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10sp"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:id="@+id/loginView">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,7 +91,8 @@
             android:layout_gravity="center"
             android:layout_margin="4dp"
             android:padding="10dp"
-            android:text="@string/continue_text"/>
+            android:text="@string/continue_text"
+            />
 
         <Button
             android:layout_width="match_parent"
