--- a/app/src/main/res/layout/fragment_high_score.xml
+++ b/app/src/main/res/layout/fragment_high_score.xml
@@ -5,4 +5,12 @@
     android:orientation="vertical"
     android:id="@+id/hs_scroll">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_column="0"
+        android:layout_row="0"
+        android:text="High Scores"
+        android:textColor="#000000"/>
+
 </ScrollView>
