--- a/app/src/main/res/layout/activity_hs.xml
+++ b/app/src/main/res/layout/activity_hs.xml
@@ -4,93 +4,89 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10sp"
+    android:background="@android:color/darker_gray"
+    android:orientation="vertical"
     android:visibility="visible"
     tools:context=".HighScoreActivity"
-    android:orientation="vertical"
-    android:layout_margin="10sp">
+    >
 
+    <TextView
+        android:id="@+id/scoreBoardHead"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10sp"
+        android:background="@android:drawable/bottom_bar"
+        android:fadingEdge="horizontal|vertical"
+        android:text="Scoreboard"
+        android:textAlignment="center"
+        android:textAppearance="@android:style/TextAppearance.WindowTitle"
+        android:textColor="@android:color/holo_green_light"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
+        android:visibility="visible" />
 
-        <fragment
-            android:name="edu.stlawu.final_project.HighScoreFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/scoreFragment"
-            android:layout_gravity="center"
-            tools:layout="@layout/fragment_hs"
-            android:layout_weight="2"/>
+    <ScrollView
+        android:id="@+id/scoreBoard"
+        android:layout_width="match_parent"
+        android:layout_height="381dp"
+        android:background="@drawable/wall_three"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="370dp"
-            android:layout_weight="2"
-            android:gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:id="@+id/high_scores_list"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="a username:"
-                    android:inputType="textPersonName"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/time"
-
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:typeface="normal"
-                    tools:text="0:00:0" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                >
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Username"
-                    android:textAlignment="center"
-                    android:textStyle="bold|italic" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Time"
-                    android:textAlignment="center"
-                    android:textStyle="bold|italic" />
-            </LinearLayout>
         </LinearLayout>
 
-    <Button
-        android:id="@+id/highscoreButton"
-        android:layout_width="197dp"
-        android:layout_height="61dp"
+    </ScrollView>
+
+    <GridLayout
+        android:layout_width="316dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="1dp"
-        android:fontFamily="casual"
-        android:text="Submit score" />
+        android:background="@android:drawable/bottom_bar"
+        android:id="@+id/grid">
+
+        <EditText
+            android:id="@+id/highscoreEditText"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:ems="10"
+            android:hint="a username:"
+            android:inputType="textPersonName"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="149dp"
+            android:layout_height="36dp"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:text="@string/time"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            android:typeface="normal"
+            tools:text="0:00:0" />
+
+    </GridLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/buttonText"
+        android:id="@+id/highscoreButton"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="40sp"/>
+
 
 </LinearLayout>
 
